# rust-control-plane

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: test.yaml
data-plane-api/: Cargo.toml  README.md  build.rs
data-plane-api/src/: lib.rs
examples/server/: server.rs
examples/server/config/: dynamic.yml
rust-control-plane/: Cargo.toml  README.md
rust-control-plane/src/: cache.rs  lib.rs  service.rs  snapshot.rs
rust-control-plane/src/cache/: snapshot.rs
rust-control-plane/src/service/: ads.rs  cds.rs  common.rs  delta_stream.rs  delta_watches.rs  discovery.rs  eds.rs  extensionconfigds.rs  lds.rs  rds.rs  runtimeds.rs  scopedrouteds.rs  sds.rs  stream.rs  stream_handle.rs  virtualhostds.rs  watches.rs
rust-control-plane/src/service/discovery/: aggregated.rs  cluster.rs  endpoint.rs  extensionconfig.rs  listener.rs  route.rs  runtime.rs  scopedroute.rs  secret.rs  virtualhost.rs
rust-control-plane/src/service/stream/: test.rs
rust-control-plane/src/snapshot/: type_url.rs
src/: cache.rs  lib.rs  snapshot.rs
test-harness/: Cargo.toml  README.md
test-harness/envoy/: ads.yaml  config.yaml  delta_ads.yaml  delta_config.yaml  run
test-harness/src/: check.rs  event.rs  generate.rs  main.rs  model.rs  process.rs  test.rs  tests.rs
test-harness/src/model/: choose.rs  event.rs  gen.rs  gen2.rs  generate.rs  to_proto.rs
test-harness/src/process/: get.rs  poll.rs
test-harness/src/tests/: test1.rs  test2.rs  test3.rs
