[package]
name = "data-plane-api"
version = "0.1.0"
edition = "2021"
description = "Envoy xDS protobuf and gRPC definitions"
repository = "https://github.com/jpittis/rust-control-plane"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
prost = "0.11"
tonic = "0.8"

[build-dependencies]
tonic-build = "0.8"
glob = "0.3"
