[package]
name = "test-harness"
version = "0.1.0"
edition = "2021"

[dependencies]
rust-control-plane = { path = "../rust-control-plane" }
data-plane-api = { path = "../data-plane-api" }
reqwest = "0.11"
tonic = "0.8"
tokio = { version = "1", features = ["full"] }
pretty_assertions = "1.3"
futures = "0.3"
clap = { version = "4", features = ["derive"] }
tracing-subscriber = "0.3"
tracing = "0.1"
indexmap = "1.9"
rand = "0.8"
rand_pcg = "0.3"
rand_seeder = "0.2"
